clusters/k8s-dmz-bourne-cloud/infrastructure/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-webui
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.dmz.bourne.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
